SigmaCodebackup3rdSep/objects/Purchase_Order__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Only_Once__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Only Once</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Po Approval Submission</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <label>Cloned From</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedUserName__c</fullName>
        <formula>CreatedBy.FirstName +&apos; &apos;+  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedUserName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exchange Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exchange_Total_Net_Buying_Price__c</fullName>
        <label>Exchange Total Net Buying Price</label>
        <summarizedField>Purchase_Order_Product__c.Exchange_Price__c</summarizedField>
        <summaryForeignKey>Purchase_Order_Product__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expected_Date__c</fullName>
        <label>Expected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Shipped_Date__c</fullName>
        <label>Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Note__c</fullName>
        <label>Legal Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <label>Net Amount</label>
        <summarizedField>Purchase_Order_Product__c.Net_Amount__c</summarizedField>
        <summaryForeignKey>Purchase_Order_Product__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Net_Quantity__c</fullName>
        <label>Net Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for No Approval Process Required</description>
        <label>POSubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders (Parent Account)</relationshipLabel>
        <relationshipName>Purchase_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date__c</fullName>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Partially Paid</fullName>
                </value>
                <value>
                    <fullName>Fully Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_Amount__c</fullName>
        <label>Pending Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Supplier__c</fullName>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Supplier, Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Name__c</fullName>
        <label>Purchase Order Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sensors_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sensors Data</label>
        <referenceTo>Sensors_Data__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Set_Alert_For_Procurement__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Set Alert For Procurement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State_Province__c</fullName>
        <label>Shipping State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Postal_Code__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Partial Delivery</fullName>
                    <isActive>false</isActive>
                    <label>Partial Delivery</label>
                </value>
                <value>
                    <fullName>Returned</fullName>
                    <isActive>false</isActive>
                    <label>Returned</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <summarizedField>Purchase_Order_Product__c.Tax_Amount__c</summarizedField>
        <summaryForeignKey>Purchase_Order_Product__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax_Treatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Treatment</label>
        <referenceTo>Tax_Treatment__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amount1__c</fullName>
        <label>Total Amount</label>
        <summarizedField>Purchase_Order_Product__c.Total_Amount__c</summarizedField>
        <summaryForeignKey>Purchase_Order_Product__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Net Buying Price</label>
        <summarizedField>Purchase_Order_Product__c.Buying_Price__c</summarizedField>
        <summaryForeignKey>Purchase_Order_Product__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vendor_Emails__c</fullName>
        <formula>Product_Supplier__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Location_Name__c</fullName>
        <inlineHelpText>Text field storing Vendor Location Name based on vendor location generating PO</inlineHelpText>
        <label>Vendor Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendor Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Locations_Type__c</field>
                <operation>equals</operation>
                <value>Vendor Inventory Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders (Vendor Location)</relationshipLabel>
        <relationshipName>Purchase_Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Mail__c</fullName>
        <description>Fetching email from Account</description>
        <label>Vendor Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vendor_Status__c</fullName>
        <label>Vendor Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Request Cancel</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sub_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>sub Approval</label>
        <type>Checkbox</type>
    </fields>
    <label>Purchase Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Product_Supplier__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Expected_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Submitted_Status</fullName>
        <columns>NAME</columns>
        <columns>Product_Supplier__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>Submitted Status</label>
    </listViews>
    <nameField>
        <displayFormat>PO-{00000}</displayFormat>
        <label>Purchase Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ExpectedDate</fullName>
        <active>false</active>
        <errorConditionFormula>Expected_Date__c  &gt;  NOW()</errorConditionFormula>
        <errorMessage>Expected Date should be greater than the Order Date.....</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Submitted_State</fullName>
        <active>false</active>
        <errorConditionFormula>IF(AND(ISNEW(),ISPICKVAL(Status__c, &apos;Submitted&apos;)), false,  ISPICKVAL(PRIORVALUE(Status__c), &apos;Submitted&apos;) )</errorConditionFormula>
        <errorMessage>Purchase Order is already Submitted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vendorStatusValidation</fullName>
        <active>false</active>
        <errorConditionFormula>( OR(AND(
       ISBLANK(Expected_Delivery_Date__c  ),
ISBLANK(Expected_Shipped_Date__c ),
              ISPICKVAL(Vendor_Status__c , &quot;Dispatched&quot;)
   ),AND(
       ISBLANK(Expected_Delivery_Date__c  ),
              ISPICKVAL(Vendor_Status__c , &quot;Dispatched&quot;)
   ),AND(
ISBLANK(Expected_Shipped_Date__c ),
              ISPICKVAL(Vendor_Status__c , &quot;Dispatched&quot;)
   )))</errorConditionFormula>
        <errorMessage>Please select Shipment Date and Expected Delivery Date</errorMessage>
    </validationRules>
</CustomObject>